Alignment issue fix

--- a/src/app/templates/modules/categoryproduct/categoryitem/addpromotion.scss
+++ b/src/app/templates/modules/categoryproduct/categoryitem/addpromotion.scss
@@ -21,7 +21,7 @@ span{
   background:$po-order-form-bg;
   //width: 500px;
   //height: 60vh;
-  width: 100vh;
+ // width: 100vh;
   height: auto; 
   border-radius: 25px;
   padding: 17px;
